{
    "name": "SG_InputActions",
    "maps": [
        {
            "name": "PlayerOne",
            "id": "dbd614d5-0678-4a2e-a561-823906395f56",
            "actions": [
                {
                    "name": "Accelerate",
                    "type": "Button",
                    "id": "0db969cf-17a4-4847-9217-b53a201b7de4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Directions",
                    "type": "Value",
                    "id": "36830b7b-18e2-4bb3-b261-424c6b29fe28",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Brake",
                    "type": "Button",
                    "id": "98a72a23-99a9-44b3-b124-e33fbe5ad0dc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CarReset",
                    "type": "Button",
                    "id": "74dce131-7df3-4ba5-b05d-f87b57c8381c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e0ffdf36-c0b2-4b97-9f3c-29e3765d414e",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Turn",
                    "id": "d1374c99-77f0-4a7a-bc49-db500da6ea2f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d6dc5e19-681f-461c-b4b3-136583a64c85",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ff3d534c-0479-4c2c-9324-ee67e1fd8d33",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "37215054-0cb5-42ad-a1c9-1a0f34799fca",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c7312b7b-25fd-428e-a184-87fd64395e1e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Directions",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0085de2b-db60-406e-8635-03b752677e06",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84b42770-a6bb-43a0-89d8-a2774e33fa82",
                    "path": "<Keyboard>/home",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CarReset",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}